Update social icons and site favicon

--- a/_sass/_starving-artist.scss
+++ b/_sass/_starving-artist.scss
@@ -13,6 +13,7 @@
 
 // Icomoon Font Icons
 @import "icomoon/base";
+// @import "icomoon/style";
 
 // Core Layout
 @import "base";
@@ -26,4 +27,4 @@
 
 
 // Misc.
-@import "mobile"; 
+@import "mobile";
