Never mind actually I should have left /fonts in the root folder...

--- a/_sass/icomoon/_base.scss
+++ b/_sass/icomoon/_base.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('/_sass/icomoon/fonts/icomoon.eot?sfbxuq');
-  src:  url('/_sass/icomoon/fonts/icomoon.eot?sfbxuq#iefix') format('embedded-opentype'),
-    url('/_sass/icomoon/fonts/icomoon.ttf?sfbxuq') format('truetype'),
-    url('/_sass/icomoon/fonts/icomoon.woff?sfbxuq') format('woff'),
-    url('/_sass/icomoon/fonts/icomoon.svg?sfbxuq#icomoon') format('svg');
+  src:  url('/fonts/icomoon.eot?sfbxuq');
+  src:  url('/fonts/icomoon.eot?sfbxuq#iefix') format('embedded-opentype'),
+    url('/fonts/icomoon.ttf?sfbxuq') format('truetype'),
+    url('/fonts/icomoon.woff?sfbxuq') format('woff'),
+    url('/fonts/icomoon.svg?sfbxuq#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
